# c-compiler

./: .gitignore  CMakeLists.txt  test.sh
example/: 00.lang
examples/: CMakeLists.txt  test.sh
examples/exclude/: test.c
examples/stage1/: hex  hex.c  no_brace  octal  octal.c  return_2  spaces.c
examples/stage2/: neg
examples/stage3/: precedence  precedence.s
examples/stage4/: and_false  and_false.s  bitwise_and.c  bitwise_or.c  bitwise_xor.c  double_return.c  left_shift.c  modulo.c  precedence  precedence.s  right_shift.c
examples/stage5/: add_assignment.c  advanced.c  comma.c  decl.c  div_assignment.c  left_shift.c  logical_and.c  logical_or.c  logical_xor.c  modulo_assignment.c  mul_assignment.c  right_shift.c
examples/stage_3/valid/: add_assignment.c  complex_compound.c  div  division_assignment.c  lshift.c  minus_assignment.c  rshift.c
examples/stage_5/valid/: comma.c  postfix_decrement.c  postfix_increment.c  prefix_decrement.c  prefix_increment.c
examples/stage_8/valid/: fibb_while.c
src/: compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  main.cpp  token.hpp  token_kind.hpp
src/compiler/: compiler.cpp  compiler.hpp  flags.hpp
src/ir/: context.hpp  convert.hpp  symbol.hpp  tac.cpp  tac.hpp  types.hpp
src/lexer/: lexer.cpp  lexer.hpp  stack_str.cpp  stack_str.hpp  token.hpp  token_kind.hpp  utility.hpp
src/parser/: int_conv.hpp  maps.hpp  parser.cpp  parser.hpp  print.hpp  rd_parser.cpp  rd_parser.hpp
src/parser/syntax/: as.hpp  assignment.hpp  assignment_op.hpp  binary_op.hpp  decl.hpp  expr.hpp  (+11 more)
src/utility/: ref.hpp  str_util.hpp
(+22 files in other folders)
